crates/cli/tests/snapshots/run_node_test__engines__adds_engines_constraint.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 439
expression: "read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "name": "test-node",
  "private": true,
  "workspaces": [
    "base",
    "esbuild",
    "lifecycles",
    "swc",
    "version-override"
  ],
  "engines": {
    "node": "18.0.0"
  },
  "packageManager": "npm@8.19.2"
}

