crates/cli/tests/snapshots/run_node_test__engines__doesnt_add_engines_constraint.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 387
expression: "read_to_string(fixture.path().join(\"package.json\")).unwrap()"
---
{
  "name": "test-node",
  "private": true,
  "workspaces": [
    "base",
    "esbuild",
    "lifecycles",
    "swc",
    "version-override"
  ]
}

